Bump Trino to 476 and Paimon to 1.3.1